[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/menu/settingsmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/background/ingame-menu-bg.tex" type="Texture" id=2]

[node name="Settings" type="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 355.0
margin/top = 92.0
margin/right = 395.0
margin/bottom = 132.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 89.0
margin/top = 58.0
margin/right = 232.0
margin/bottom = 445.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="sounds" type="CheckBox" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 70.0
margin/right = 32.0
margin/bottom = 93.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Label" type="Label" parent="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = 73.0
margin/right = 76.0
margin/bottom = 87.0
text = "Sounds"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnBack" type="Button" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 300.0
margin/right = 122.0
margin/bottom = 330.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[node name="volumeSlider" type="HSlider" parent="TextureFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 19.0
margin/top = 96.0
margin/right = 114.0
margin/bottom = 112.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="pressed" from="TextureFrame/sounds" to="." method="_on_sounds_pressed"]

[connection signal="toggled" from="TextureFrame/sounds" to="." method="_on_sounds_toggled"]

[connection signal="pressed" from="TextureFrame/btnBack" to="." method="_on_btnBack_pressed"]

[connection signal="value_changed" from="TextureFrame/volumeSlider" to="." method="_on_volumeSlider_value_changed"]


